# sonobe

./: Cargo.toml
examples/: sha256.rs
folding-schemes/: Cargo.toml
folding-schemes/src/ccs/: r1cs.rs
folding-schemes/src/commitment/: ipa.rs  mod.rs  pedersen.rs
folding-schemes/src/folding/circuits/: cyclefold.rs  sum_check.rs
folding-schemes/src/folding/circuits/nonnative/: affine.rs  uint.rs
folding-schemes/src/folding/hypernova/: cccs.rs  circuit.rs  circuits.rs  lcccs.rs  mod.rs  nimfs.rs  utils.rs
folding-schemes/src/folding/nova/: circuits.rs  cyclefold.rs  decider_eth.rs  decider_eth_circuit.rs  mod.rs  nifs.rs  traits.rs
folding-schemes/src/folding/protogalaxy/: folding.rs  mod.rs  traits.rs
folding-schemes/src/frontend/: mod.rs
folding-schemes/src/frontend/circom/: mod.rs  utils.rs
folding-schemes/src/transcript/: poseidon.rs
folding-schemes/src/utils/: lagrange_poly.rs  mle.rs
folding-schemes/src/utils/espresso/: virtual_polynomial.rs
folding-schemes/src/utils/espresso/sum_check/: mod.rs  prover.rs  verifier.rs
