[workspace]
members = [
    "folding-schemes",
    "solidity-verifiers",
    "cli"
]
resolver = "2"

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra/" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra/" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra/" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra/" }
ark-std = { git = "https://github.com/arkworks-rs/std/" }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit/" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std/" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra/" }
ark-grumpkin = { git = "https://github.com/arkworks-rs/algebra/" }
ark-pallas = { git = "https://github.com/arkworks-rs/algebra/" }
ark-vesta = { git = "https://github.com/arkworks-rs/algebra/" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16/" }
ark-relations = { git = "https://github.com/arkworks-rs/snark/" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives/" }
